--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -7,8 +7,52 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>bobo</h2>
-    <h1>Shan</h1>
-    <h1>333333333333333333333333333333</h1>
+    <div class="wrapper">
+
+
+        <div class="aboutUs">
+            <div>
+                <H1>ABOUT US.</H1>
+                <h3>關於凱茂</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officiis amet iusto repudiandae velit error voluptatem excepturi, quibusdam aliquam alias praesentium doloremque odio? Sit quia officiis qui corporis. Dolores, facilis.</p>
+            </div>
+
+            <div class="cover">
+                <img src="" alt="圖片">
+            </div>
+        </div>
+
+
+        <div class="slogon">
+            <h3>凱茂理念</h3>
+            <h1>Take KAIMAU,take the future</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, ratione! Labore laudantium iusto eum ea illum corporis facilis optio, officia accusamus quia reiciendis modi impedit omnis veniam eos maiores voluptates.</p>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+
+        </div>
+
+
+        <div class="partner">
+            <h3>合作夥伴</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates adipisci, ea eum quae unde numquam. Voluptatem mollitia, enim voluptatibus, odio nam quam illo tempore cumque eligendi sapiente vero, aspernatur nostrum.</p>
+            <div>
+                <div><img src="" alt="1"></div>
+                <div><img src="" alt="2"></div>
+                <div><img src="" alt="3"></div>
+                <div><img src="" alt="4"></div>
+                <div><img src="" alt="5"></div>
+                <div><img src="" alt="6"></div>
+                <div><img src="" alt="7"></div>
+                <div><img src="" alt="8"></div>
+            </div>
+        </div>
+        <div class="milestone">
+            <h3>里程碑</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque est reiciendis dolorum totam, beatae, dolorem saepe nostrum eum debitis adipisci natus nemo hic cum nulla quisquam nisi necessitatibus quia.</p>
+            <div>哈利波特線條動畫</div>
+        </div>
+
+      </div>
 </body>
 </html>
