--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -18,20 +18,20 @@
     <div class="container">
 
 
-        <div class="aboutUs">
-            <div>
+        <div class="aboutUs givePadding" >
+            <div class="a1">
                 <H1>ABOUT US.</H1>
                 <h3>關於凱茂</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officiis amet iusto repudiandae velit error voluptatem excepturi, quibusdam aliquam alias praesentium doloremque odio? Sit quia officiis qui corporis. Dolores, facilis.</p>
             </div>
 
-            <div class="cover">
-                <img src="" alt="圖片">
+            <div class="cover a2">
+                <img src="https://fakeimg.pl/150x200/" alt="圖片 ">
             </div>
         </div>
 
 
-        <div class="slogon">
+        <div class="slogon givePadding">
             <h3>凱茂理念</h3>
             <h1>Take KAIMAU,take the future</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, ratione! Labore laudantium iusto eum ea illum corporis facilis optio, officia accusamus quia reiciendis modi impedit omnis veniam eos maiores voluptates.</p>
@@ -41,7 +41,7 @@
         </div>
 
 
-        <div class="partner">
+        <div class="partner givePadding">
             <h3>合作夥伴</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates adipisci, ea eum quae unde numquam. Voluptatem mollitia, enim voluptatibus, odio nam quam illo tempore cumque eligendi sapiente vero, aspernatur nostrum.</p>
             <div>
@@ -55,7 +55,7 @@
                 <div><img src="" alt="8"></div>
             </div>
         </div>
-        <div class="milestone">
+        <div class="milestone givePadding">
             <h3>里程碑</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque est reiciendis dolorum totam, beatae, dolorem saepe nostrum eum debitis adipisci natus nemo hic cum nulla quisquam nisi necessitatibus quia.</p>
             <div>哈利波特線條動畫</div>
