--- a/html/news.html
+++ b/html/news.html
@@ -1,5 +1,227 @@
-<link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>News</title>
+
+    <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/news.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    
+</head>
+
+<body>
+    <div class="container">
+
+        <!-- 最新消息 -->
+        <div>
+            <div>
+                <h1>WHAT'S NEW.</h1>
+                <h3>最新消息</h3>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui incidunt necessitatibus vel
+                    autem saepe tempora architecto tempore consequuntur, sit perspiciatis nihil veritatis labore,
+                    cupiditate ullam doloremque temporibus pariatur perferendis.</p>
+            </div>
+        </div>
+        <!-- 產品新訊 -->
+        <div>
+            <div>
+                <h3>產品新訊</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
+                    doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
+                    provident eum.</p>
+            </div>
+            <div>
+                <div>
+                    <video src=""></video>
+                    <!-- 主打產品影片 -->
+                </div>
+                <div>
+                    <h3>主打產品123</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem at veritatis eos commodi et
+                        illo molestiae enim quidem, odio maiores non quas dicta distinctio harum esse, dolorum soluta
+                        expedita. Distinctio!</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <div>
+                        <img src="" alt="圖片">
+                    </div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="" alt="圖片">
+                    </div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="" alt="圖片">
+                    </div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 服務項目 -->
+        <div>
+            <div>
+                <h3>服務項目</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
+                    doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
+                    provident eum.</p>
+            </div>
+            <div>
+                <div>
+                    <div><img src="" alt="1"></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt="2"></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt="3"></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt="4"></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt="5"></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt="6"></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt="7"></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt="8"></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 客戶個案 -->
+        <div>
+            <div>
+                <h3>客戶個案</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
+                    doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
+                    provident eum.</p>
+            </div>
+            <div>
+                <div>
+                    <div><img src="" alt=""></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt=""></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+                <div>
+                    <div><img src="" alt=""></div>
+                    <div>
+                        <h3>Heading</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
