--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -35,8 +35,23 @@
             <h3>凱茂理念</h3>
             <h1>Take KAIMAU,take the future</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, ratione! Labore laudantium iusto eum ea illum corporis facilis optio, officia accusamus quia reiciendis modi impedit omnis veniam eos maiores voluptates.</p>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
+            <div>
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#eee"></rect>
+                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+                </svg>
+                <img src="" alt="">
+            </div>
+            <div>
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#eee"></rect>
+                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+                </svg>
+                <img src="" alt="">
+            </div>
+            <!-- <div><img src="" alt=""></div> -->
 
         </div>
 
