--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -56,9 +56,9 @@
         </div>
 
 
-        <div class="partner givePadding">
-            <h3>合作夥伴</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates adipisci, ea eum quae unde numquam. Voluptatem mollitia, enim voluptatibus, odio nam quam illo tempore cumque eligendi sapiente vero, aspernatur nostrum.</p>
+        <div class="partner givePadding ">
+            <h3 class="text-center">合作夥伴</h3>
+            <p class="text-center container" style="width:50% ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates adipisci, ea eum quae unde numquam. Voluptatem mollitia, enim voluptatibus, odio nam quam illo tempore cumque eligendi sapiente vero, aspernatur nostrum.</p>
             <div>
                 <div><img src="" alt="1"></div>
                 <div><img src="" alt="2"></div>
