--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -59,15 +59,15 @@
         <div class="partner givePadding ">
             <h3 class="text-center">合作夥伴</h3>
             <p class="text-center container" style="width:50% ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates adipisci, ea eum quae unde numquam. Voluptatem mollitia, enim voluptatibus, odio nam quam illo tempore cumque eligendi sapiente vero, aspernatur nostrum.</p>
-            <div>
-                <div><img src="" alt="1"></div>
-                <div><img src="" alt="2"></div>
-                <div><img src="" alt="3"></div>
-                <div><img src="" alt="4"></div>
-                <div><img src="" alt="5"></div>
-                <div><img src="" alt="6"></div>
-                <div><img src="" alt="7"></div>
-                <div><img src="" alt="8"></div>
+            <div class ='container' style="padding-left:  75px;">
+                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
+                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
+                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
+                <div><img class="rounded-circle float-rigth" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
+                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
+                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
+                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
+                <div><img class="rounded-circle " src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
             </div>
         </div>
         <div class="milestone givePadding">
