--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -25,7 +25,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officiis amet iusto repudiandae velit error voluptatem excepturi, quibusdam aliquam alias praesentium doloremque odio? Sit quia officiis qui corporis. Dolores, facilis.</p>
             </div>
 
-            <div class="cover a2">
+            <div class="a2">
                 <img src="https://fakeimg.pl/150x200/" alt="圖片 ">
             </div>
         </div>
@@ -73,9 +73,13 @@
         <div class="milestone givePadding">
             <h3>里程碑</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque est reiciendis dolorum totam, beatae, dolorem saepe nostrum eum debitis adipisci natus nemo hic cum nulla quisquam nisi necessitatibus quia.</p>
-            <div>哈利波特線條動畫</div>
-        </div>
+            <!-- <div>https://tier4.jp/opensource/</div> -->
+
+           
+            
 
       </div>
 </body>
 </html>
+
+<script></script>
