--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -78,48 +78,38 @@
             <div class="section_chunk">
                 <section class="section section2">
                   <div class="section_child">
-                    <h2><span class="tit"><span>AS A</span><span>PLATFORM</span></span></h2>
+                    <h2><span class="tit"><span>AS A</span><span>服務項目</span></span></h2>
                     <div class="cont">
                       <div class="left" style="top: -167.5px;"><img class="show" src="https://tier4.jp/assets/img/opensource/autoware-step1.png" alt="" loading="lazy"><img src="https://tier4.jp/assets/img/opensource/autoware-step2.png" alt="" loading="lazy" class=""><img src="https://tier4.jp/assets/img/opensource/autoware-step3.png" alt="" loading="lazy" class=""><img src="https://tier4.jp/assets/img/opensource/autoware-step4.png" alt="" loading="lazy" class=""><img src="https://tier4.jp/assets/img/opensource/autoware-step5.png" alt="" loading="lazy" class=""><img src="https://tier4.jp/assets/img/opensource/autoware-step6.png" alt="" loading="lazy" class=""><img src="https://tier4.jp/assets/img/opensource/autoware-step7.png" alt="" loading="lazy" class=""><img src="https://tier4.jp/assets/img/opensource/autoware-step8.png" alt="" loading="lazy" class=""></div>
                       <div class="right">
                         <div class="chunk clearify">
-                          <div class="txt font2">⼀般的に、⾃動運転システムは、LiDARやカメラ、GNSS、IMU等のセンサー情報を元に、認知（⾃⼰位置推定・環境認識）、予測・判断（経路計画・経路追従）、操作（ステアリング・アクセル・ブレーキ）を⼈間のドライバーに代わって⾏います。<br>ティアフォーが開発をリードするAutowareもドライバーを代替することを⽬指しており、大きく分けて以下の7つの機能があります（詳細は開発プラットフォームであるGitHub参照）。</div>
-                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step1.png" alt="" loading="lazy"></div>
+                          <div class="txt font2">微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬化軟體、開發工具軟體、網站開發服務、備份備援、郵件伺服務器及其他等規劃與採購服務。</div>
+                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step1.png" alt="軟體銷售服務" loading="lazy"></div>
                         </div>
                         <div class="chunk">
                           <h3>SENSING</h3>
-                          <div class="txt font2">LiDAR、カメラ、GNSSといった外界センサーや、IMU等の内界センサーから情報を集め、処理が⾏える形に加⼯。</div>
-                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step2.png" alt="" loading="lazy"></div>
+                          <div class="txt font2">凱茂資訊為微軟的雲端服務供應商(CSP),提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練,整合企業内外的Web AP及應用。</div>
+                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step2.png" alt="雲端銷售服務" loading="lazy"></div>
                         </div>
                         <div class="chunk">
                           <h3>LOCALIZATION</h3>
-                          <div class="txt font2">⾼精度3次元地図とLIDARデータの照合結果、IMUあるいはGNSSの測位結果を統合し、⾃⾞の位置姿勢を推定。</div>
-                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step3.png" alt="" loading="lazy"></div>
+                          <div class="txt font2">整合客戶現有資訊架構,根據客戶規模規劃建置適合之資訊系統。</div>
+                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step3.png" alt="系統整合服務" loading="lazy"></div>
                         </div>
                         <div class="chunk">
                           <h3>PERCEPTION</h3>
-                          <div class="txt font2">物体認識や時系列での追跡、⾏動予測、信号認識。</div>
-                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step4.png" alt="" loading="lazy"></div>
+                          <div class="txt font2">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台, 並包含機房機櫃等規劃及建置。</div>
+                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step4.png" alt="網路規劃服務" loading="lazy"></div>
                         </div>
                         <div class="chunk">
                           <h3>PLANNING</h3>
-                          <div class="txt font2">障害物回避や駐⾞計画を含め、⾃⾞の現在地からゴールまでの経路を計画。</div>
-                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step5.png" alt="" loading="lazy"></div>
+                          <div class="txt font2">因應資安法規,協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</div>
+                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step5.png" alt="資訊安全服務" loading="lazy"></div>
                         </div>
                         <div class="chunk">
                           <h3>CONTROL</h3>
-                          <div class="txt font2">計画された経路に沿って⾛るための⾞両への制御信号を⽣成。</div>
-                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step6.png" alt="" loading="lazy"></div>
-                        </div>
-                        <div class="chunk">
-                          <h3>VEHICLE INTERFACE</h3>
-                          <div class="txt font2">上記の制御信号を、様々な⾞両特性に応じた指令値へ変換。</div>
-                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step7.png" alt="" loading="lazy"></div>
-                        </div>
-                        <div class="chunk">
-                          <h3>MAP DATA</h3>
-                          <div class="txt font2">地図情報に環境データを加えた⾼精度3次元地図を使⽤。</div>
-                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step8.png" alt="" loading="lazy"></div>
+                          <div class="txt font2">擁有專業的技術團隊,協助客戶規劃與建置安全網路、機房維與相關軟體售前與售後顧問服務。</div>
+                          <div class="img sp"><img src="https://tier4.jp/assets/img/opensource/autoware-step6.png" alt="技術維護服務" loading="lazy"></div>
                         </div>
                       </div>
                     </div>
