--- a/html/contact.html
+++ b/html/contact.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -18,7 +18,7 @@
 
 <body>
     <div id="header">
-        <div>
+        <div id="headerContent">
             <h1>
                 GET IN TOUCH
             </h1>
