--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -59,16 +59,80 @@
         <div class="partner givePadding ">
             <h3 class="text-center">合作夥伴</h3>
             <p class="text-center container" style="width:50% ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates adipisci, ea eum quae unde numquam. Voluptatem mollitia, enim voluptatibus, odio nam quam illo tempore cumque eligendi sapiente vero, aspernatur nostrum.</p>
-            <div class ='container' style="padding-left:  75px;">
-                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
-                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
-                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
-                <div><img class="rounded-circle float-rigth" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
-                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
-                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
-                <div><img class="rounded-circle float-left" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
-                <div><img class="rounded-circle " src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="  height="140"></div>
+            <div class="container text-center my-3">
+                <h2 class="font-weight-light">Bootstrap Multi Slide Carousel</h2>
+                <div class="row mx-auto my-auto justify-content-center">
+                     <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+                         <div class="carousel-inner" role="listbox"> <div class="carousel-item active">
+                             <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-img"> <img src="//via.placeholder.com/500x400/31f?text=1" class="img-fluid"> </div>
+                                    <div class="card-img-overlay">Slide 1</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="//via.placeholder.com/500x400/e66?text=2" class="img-fluid">
+                                    </div>
+                                    <div class="card-img-overlay">Slide 2</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="//via.placeholder.com/500x400/7d2?text=3" class="img-fluid">
+                                    </div>
+                                    <div class="card-img-overlay">Slide 3</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="//via.placeholder.com/500x400?text=4" class="img-fluid">
+                                    </div>
+                                    <div class="card-img-overlay">Slide 4</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="//via.placeholder.com/500x400/aba?text=5" class="img-fluid">
+                                    </div>
+                                    <div class="card-img-overlay">Slide 5</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="//via.placeholder.com/500x400/fc0?text=6" class="img-fluid">
+                                    </div>
+                                    <div class="card-img-overlay">Slide 6</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </a>
+                    <a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </a>
+                </div>
             </div>
+            <h5 class="mt-2 fw-light">advances one slide at a time</h5>
+            </div>
+            
         </div>
         <div class="milestone givePadding">
             <h3>里程碑</h3>
@@ -122,4 +186,20 @@
 </body>
 </html>
 
-<script></script>
+<script>
+    let items = document.querySelectorAll('.carousel .carousel-item')
+
+    items.forEach((el) => {
+        const minPerSlide = 4
+        let next = el.nextElementSibling
+        for (var i=1; i<minPerSlide; i++) {
+            if (!next) {
+                // wrap carousel by using first child
+                next = items[0]
+            }
+            let cloneChild = next.cloneNode(true)
+            el.appendChild(cloneChild.children[0])
+            next = next.nextElementSibling
+        }
+    })
+</script>
