--- a/html/news.html
+++ b/html/news.html
@@ -19,14 +19,14 @@
     <div class="container">
 
         <!-- 最新消息 -->
-        <div class="row browserHeight">
-            <div class="col-sm-6 d-flex align-items-center">
+        <div class="browserHeight">
+            <div class="text-center height30">
                 <h1>WHAT'S NEW.</h1>
                 <h3>最新消息</h3>
             </div>
-            <div class="col-sm-6 d-flex align-items-center">
-                <!-- 不確定這邊是不是放一段假文就好?還是那個空白格線要切出來?? -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui incidunt necessitatibus vel
+            <div class="row">
+                <img class="col-sm-6" src="https://fakeimg.pl/400x300/" alt="最新消息">
+                <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui incidunt necessitatibus vel
                     autem saepe tempora architecto tempore consequuntur, sit perspiciatis nihil veritatis labore,
                     cupiditate ullam doloremque temporibus pariatur perferendis.</p>
             </div>
@@ -35,8 +35,8 @@
         <!-- 產品新訊 -->
         <div>
             <div class="container-fluid height30 bg-secondary text-light d-flex align-items-center">
-                <h3 class="col-sm-6 align-items-center">產品新訊</h3>
-                <p class="col-sm-6 align-items-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
+                <h3 class="col-sm-5 align-items-center text-right">產品新訊</h3>
+                <p class="col-sm-7 align-items-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
                     doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
                     provident eum.</p>
             </div>
@@ -98,8 +98,8 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-3 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/200x150/" alt="1">
+                <div class="col-sm-4 card bg-secondary text-light">
+                    <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="1">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
@@ -108,8 +108,8 @@
                             laboriosam fuga vitae!</p>
                     </div>
                 </div>
-                <div class="col-sm-3 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/200x150/" alt="2">
+                <div class="col-sm-4 card bg-secondary text-light">
+                    <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="2">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
@@ -118,8 +118,8 @@
                             laboriosam fuga vitae!</p>
                     </div>
                 </div>
-                <div class="col-sm-3 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/200x150/" alt="3">
+                <div class="col-sm-4 card bg-secondary text-light">
+                    <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="3">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
@@ -128,8 +128,8 @@
                             laboriosam fuga vitae!</p>
                     </div>
                 </div>
-                <div class="col-sm-3 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/200x150/" alt="4">
+                <div class="col-sm-4 card bg-secondary text-light">
+                    <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="4">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
@@ -138,8 +138,8 @@
                             laboriosam fuga vitae!</p>
                     </div>
                 </div>
-                <div class="col-sm-3 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/200x150/" alt="5">
+                <div class="col-sm-4 card bg-secondary text-light">
+                    <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="5">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
@@ -148,8 +148,8 @@
                             laboriosam fuga vitae!</p>
                     </div>
                 </div>
-                <div class="col-sm-3 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/200x150/" alt="6">
+                <div class="col-sm-4 card bg-secondary text-light">
+                    <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="6">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
@@ -157,28 +157,7 @@
                             tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
                             laboriosam fuga vitae!</p>
                     </div>
-                </div>
-                <div class="col-sm-3 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/200x150/" alt="7">
-                    <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
-                    </div>
-                </div>
-                <div class="col-sm-3 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/200x150/" alt="8">
-                    <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
-                    </div>
-                </div>
-                
+                </div>             
                 
             </div>
         </div>
