--- a/html/news.html
+++ b/html/news.html
@@ -26,7 +26,8 @@
             </div>
             <div class="row">
                 <img class="col-sm-6" src="https://fakeimg.pl/400x300/" alt="最新消息">
-                <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui incidunt necessitatibus vel
+                <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui incidunt
+                    necessitatibus vel
                     autem saepe tempora architecto tempore consequuntur, sit perspiciatis nihil veritatis labore,
                     cupiditate ullam doloremque temporibus pariatur perferendis.</p>
             </div>
@@ -36,7 +37,8 @@
         <div>
             <div class="container-fluid height30 bg-secondary text-light d-flex align-items-center">
                 <h3 class="col-sm-5 align-items-center text-right">產品新訊</h3>
-                <p class="col-sm-7 align-items-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
+                <p class="col-sm-7 align-items-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                    neque porro ad ducimus adipisci iusto
                     doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
                     provident eum.</p>
             </div>
@@ -59,7 +61,8 @@
                     <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="1">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                            eaque error vitae
                             eos
                             tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
                             laboriosam fuga vitae!</p>
@@ -69,7 +72,8 @@
                     <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="2">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                            eaque error vitae
                             eos
                             tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
                             laboriosam fuga vitae!</p>
@@ -79,7 +83,8 @@
                     <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="3">
                     <div class="card-img-overlay">
                         <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                            eaque error vitae
                             eos
                             tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
                             laboriosam fuga vitae!</p>
@@ -90,7 +95,7 @@
 
         <!-- 服務項目 -->
         <div class="browserHeight">
-            <div class="text-center height30" >
+            <div class="text-center height30">
                 <h3>服務項目</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque porro ad ducimus adipisci iusto
                     doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
@@ -101,64 +106,46 @@
                 <div class="col-sm-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="1">
                     <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
+                        <h3 class="card-title">軟體銷售服務</h3>
+                        <p class="card-text">微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬化軟體、開發工具軟體、網站開發服務、備份備援、郵件伺服務器及其他等規劃與採購服務。</p>
                     </div>
                 </div>
                 <div class="col-sm-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="2">
                     <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
+                        <h3 class="card-title">雲端銷售服務</h3>
+                        <p class="card-text">凱茂資訊為微軟的雲端服務供應商(CSP),提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練,整合企業内外的Web AP及應用。</p>
                     </div>
                 </div>
                 <div class="col-sm-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="3">
                     <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
+                        <h3 class="card-title">系統整合服務</h3>
+                        <p class="card-text">整合客戶現有資訊架構,根據客戶規模規劃建置適合之資訊系統。</p>
                     </div>
                 </div>
                 <div class="col-sm-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="4">
                     <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
+                        <h3 class="card-title">網路規劃服務</h3>
+                        <p class="card-text">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台, 並包含機房機櫃等規劃及建置。</p>
                     </div>
                 </div>
                 <div class="col-sm-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="5">
                     <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
+                        <h3 class="card-title">資訊安全服務</h3>
+                        <p class="card-text">因應資安法規,協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</p>
                     </div>
                 </div>
                 <div class="col-sm-4 card bg-secondary text-light">
                     <img class="rounded card-img" src="https://fakeimg.pl/200x120/" alt="6">
                     <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
+                        <h3 class="card-title">技術維護服務</h3>
+                        <p class="card-text">擁有專業的技術團隊,協助客戶規劃與建置安全網路、機房維與相關軟體售前與售後顧問服務。</p>
                     </div>
-                </div>             
-                
+                </div>
+
             </div>
         </div>
 
@@ -208,7 +195,7 @@
                             laboriosam fuga vitae!</p>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
