--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,147 @@
-<link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    
+
+
+    <title>凱茂資訊</title>
+
+</head>
+
+<body>
+    <!-- 導覽列 -->
+    <navbar>
+        <a href="#" class="item">首頁</a>
+        <a href="#" class="item">關於我們</a>
+        <a href="#" class="item">服務項目</a>
+        <a href="#" class="item">聯絡洽詢</a>
+
+    </navbar>
+    <!-- logo頁面 -->
+    <div class="banner">
+        <div class="container-fluid">
+            <div class="banner-pic">
+                <img src="../images/logo-gray.png">
+            </div>
+            <div calss="banner-text">
+                <h3>凱茂資訊公司</h3>
+                <p>啦啦啦啦啦啦啦</p>
+            </div>
+        </div>
+    </div>
+    <!-- slogsn頁面 -->
+    <div class="slogan">
+        <div class="container-fluid">
+            <div calss="slogan-text">
+                <h1>Take KAIMAU，<br />Take the future</h1>
+                <small>凱茂資訊公司</small>
+                <p>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦</p>
+            </div>
+        </div>
+    </div>
+    <!-- 服務項目 -->
+    <div class="container-fluid">
+        <div class="about">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h1>WHAT WE DO.</h1>
+                    <h3>服務項目</h3>
+                    <p>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦</p>
+                </div>
+                <div class="col-sm-6">
+                    <!-- 到時候替換動畫效果 -->
+                    <img src="../images/pika.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 最新消息 -->
+    <div class="container-fluid">
+        <div class="news">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="video1">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/sr_VSS_gnGE"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h1>WHAT'S NEW.</h1>
+                    <h3>最新消息</h3>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">
+                    <img class="news-pic" src="../images/pika.jpg" width="100%">
+                    <div class="card-img-overlay">
+                        <div class="col-sm-9 text-light">
+                            <h4>Heading</h4>
+                            <p>pika pika pika pika pika pika pika pika pika pika pika pika </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <img class="news-pic" src="../images/pika.jpg" width="100%">
+                    <div class="card-img-overlay">
+                        <div class="col-sm-9 text-light">
+                            <h4>Heading</h4>
+                            <p>pika pika pika pika pika pika pika pika pika pika pika pika </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <img class="news-pic" src="../images/pika.jpg" width="100%">
+                    <div class="card-img-overlay">
+                        <div class="col-sm-9 text-light">
+                            <h4>Heading</h4>
+                            <p>pika pika pika pika pika pika pika pika pika pika pika pika </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <img class="news-pic" src="../images/pika.jpg" width="100%">
+                    <div class="card-img-overlay">
+                        <div class="col-sm-9 text-light">
+                            <h4>Heading</h4>
+                            <p>pika pika pika pika pika pika pika pika pika pika pika pika </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 關於我們 -->
+    <div class="container-fluid">
+        <div class="about">
+            <div class="row height100vh">
+                <div class="col-sm-6 d-flex align-items-center">
+                    <h1>Aboust Us</h1>
+                    <h3>關於我們</h3>
+                </div>
+                <div class="col-sm-6 d-flex align-items-center">
+                    <img src="../images/pika.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+
+    </div>
+
+
+</body>
+
+</html>
