--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,155 @@
-<link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    
+    <script src = "../js/app.js"></script>
+    <script src="https://unpkg.com/scrollreveal@4"></script>
+    <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css">
+</head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Serif+TC:wght@200&display=swap');
+</style>
+
+<body>
+    <navbar>
+        <a href="#" class="item">首頁</a>
+        <a href="#" class="item">關於我們</a>
+        <a href="#" class="item">服務項目</a>
+        <a href="#" class="item">聯絡洽詢</a>
+
+    </navbar>
+
+    <div class="intro"></div>
+
+    <!-- 服務項目 -->
+    <div class="container" style = margin-top:100px>
+        <div class="row">
+            <div class="col-lg-6">
+                <div style = "padding:80px; margin-top: 100px;margin-bottom: 100px;">
+                    <h1 class = "indexh1">WHAT WE<br>DO.
+                    <h2 class = "indexh2">服務項目</h2>
+                    <p class = "indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                    <button class="roundbutton"
+                    onclick="window.location.href='./Words.html'">查看更多</button>
+                </div>
+                <div class = "indexContent reveal">
+                    <h3 class = "indexh3">服務項目</h3>
+                    <p class = "indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                </div>
+                <div class = "indexContent reveal">
+                    <h3 class = "indexh3">服務項目</h3>
+                    <p class = "indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                </div>
+                <div class = "indexContent reveal">
+                    <h3 class = "indexh3">服務項目</h3>
+                    <p class = "indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                </div>
+                <div class = "indexContent reveal">
+                    <h3 class = "indexh3">服務項目</h3>
+                    <p class = "indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                </div>
+                <div class = "indexContent reveal">
+                    <h3 class = "indexh3">服務項目</h3>
+                    <p class = "indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                </div>
+                <div class = "indexContent reveal">
+                    <h3 class = "indexh3">服務項目</h3>
+                    <p class = "indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                </div>
+            </div>
+
+            <!-- 到時候替換動畫效果 -->
+            <div class="col-lg-6 d-flex indeximg sticky-top" style="background-color:#c2c2c2; height:900px;">
+                <img class = "show" src="../img/index/index-01.png" style = "width:100%; object-fit: contain;">
+
+
+            </div>
+        </div>
+
+    </div>
+
+    <!-- 最新消息 -->
+    <div class="container" style = margin-top:100px>
+        <div class="row">
+            <div class="col-lg-7 d-flex" style="background-color:#ffffff; height:400px; margin-top: 100px">
+                <!-- <img class = "show" src="../img/index/index-01.png" style = "width:100%; object-fit: contain;"> -->
+                <iframe width="800" height="400" src="https://www.youtube.com/embed/-r7pvpS5-VY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-lg-5">
+                <div style = "padding:80px; margin-top: 20px;margin-bottom: 100px;">
+                    <h1 class = "indexh1">WHAT's<br>NEWS.
+                    <h2 class = "indexh2">最新消息</h2>
+                    <p class = "indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。</p>
+                    <button class="roundbutton"
+                    onclick="window.location.href='./Words.html'">查看更多</button>
+                </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <img class="news-pic" src="../images/pika.jpg" width="100%">
+            <div class="card-img-overlay">
+                <div class="col-sm-9 text-light">
+                    <h4>Heading</h4>
+                    <p>pika pika pika pika pika pika pika pika pika pika pika pika </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <img class="news-pic" src="../images/pika.jpg" width="100%">
+            <div class="card-img-overlay">
+                <div class="col-sm-9 text-light">
+                    <h4>Heading</h4>
+                    <p>pika pika pika pika pika pika pika pika pika pika pika pika </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <img class="news-pic" src="../images/pika.jpg" width="100%">
+            <div class="card-img-overlay">
+                <div class="col-sm-9 text-light">
+                    <h4>Heading</h4>
+                    <p>pika pika pika pika pika pika pika pika pika pika pika pika </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <img class="news-pic" src="../images/pika.jpg" width="100%">
+            <div class="card-img-overlay">
+                <div class="col-sm-9 text-light">
+                    <h4>Heading</h4>
+                    <p>pika pika pika pika pika pika pika pika pika pika pika pika </p>
+                </div>
+            </div>
+        </div>
+
+            <!-- 關於我們 -->
+    <div class="container-fluid">
+        <div class="about">
+            <div class="row height100vh">
+                <div class="col-sm-6 d-flex align-items-center">
+                    <h1>Aboust Us</h1>
+                    <h3>關於我們</h3>
+                </div>
+                <div class="col-sm-6 d-flex align-items-center">
+                    <img src="../images/pika.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+</body>
+
+</html>
