--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -21,8 +21,8 @@
         <!-- 關於我們 -->
         <div class="aboutUs givePadding" >
             <div class="a1">
-                <H1>ABOUT US.</H1>
-                <h3>關於凱茂</h3>
+                <H1 class="col-md-2">ABOUT US.</H1>
+                <h3 class="mt-5">關於凱茂</h3>
                 <p>
                     凱茂資訊成立於2009年，以『服務』為出發點，公司團隊具備多年資訊領域之銷售與技術服務經驗。針對各地區不同的產業型態，提供穩定優質的服務。 <br>
                     凱茂資訊期許成為一家能提供完整解決方案之專業系統整合服務廠商，以滿足客戶在建置資訊技術架構時，所需的資訊軟硬體設備、顧問諮詢與整合服務。<br>
