--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -19,10 +19,12 @@
     <div class="container">
 
         <!-- 關於我們 -->
-        <div class="aboutUs givePadding" >
+        <div class="aboutUs givePadding clearfix" >
             <div class="a1">
+                
                 <H1 class="col-md-2">ABOUT US.</H1>
                 <h3 class="mt-5">關於凱茂</h3>
+                <img src="../img/index/aboutus00.png" class="col-md-6 float-md-end mb-3 ms-md-3 " alt="圖片 ">
                 <p>
                     凱茂資訊成立於2009年，以『服務』為出發點，公司團隊具備多年資訊領域之銷售與技術服務經驗。針對各地區不同的產業型態，提供穩定優質的服務。 <br>
                     凱茂資訊期許成為一家能提供完整解決方案之專業系統整合服務廠商，以滿足客戶在建置資訊技術架構時，所需的資訊軟硬體設備、顧問諮詢與整合服務。<br>
@@ -33,11 +35,12 @@
                     同時，經銷代理眾多國際知名原廠的軟、硬體產品及完整實施服務。<br>
                     服務型態由資訊系統基礎架構（伺服器、網路設備、儲存設備等）開始，並提供：負載平衡管理、資料備份、資訊安全管理、伺服器虛擬化、桌面虛擬化、系統及網路之效能監控管理、及網路雲端服務建置之多元解決方案。以滿足不同客戶的需求。<br>
                 </p>
+                
             </div>
 
-            <div class="a2">
-                <img src="https://fakeimg.pl/150x200/" alt="圖片 ">
-            </div>
+            <!-- <div class="a2 row">
+                <img src="../img/index/aboutus00.png" alt="圖片 ">
+            </div> -->
         </div>
 
         <!-- 理念 -->
