--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,6 @@
 </style>
 
 <body>
-    =======
 
 
     <title>凱茂資訊</title>
@@ -31,14 +30,34 @@
     </head>
 
     <body>
-        <!-- 導覽列 -->
-        >>>>>>> ecf4980c623bf8fb057581ea5a805efa4dc51588
-        <navbar>
-            <a href="#" class="item">首頁</a>
-            <a href="#" class="item">關於我們</a>
-            <a href="#" class="item">服務項目</a>
-            <a href="#" class="item">聯絡洽詢</a>
-        </navbar>
+        <input type="checkbox" id="active">
+        <label for="active" class="menu-btn"><span></span></label>
+        <label for="active" class="close"></label>
+        <div class="wrapper">
+            <!-- <ul>
+                <li><img src = "../img/logo/logo-white.png" style = "width:200px"></li>
+                <br>
+                <li><a href="#">回到首頁 Home</a></li>
+                <li><a href="#">關於凱茂 About</a></li>
+                <li><a href="#">服務項目 Services</a></li>
+                <li><a href="#">產品資訊 Product</a></li>
+                <li><a href="#">聯絡我們 Contact</a></li>
+            </ul> -->
+            <div class = "wapperContent">
+                <img src = "../img/logo/only-logo.png">
+                
+                <div class = "wapperContentWord">
+                    <a href = "#">HOME</a><br>
+                    <a href = "#">ABOUT</a><br>
+                    <a href = "#">SERVICES</a><br>
+                    <a href = "#">PRODUCTS</a><br>
+                    <a href = "#">CONTACT</a>
+                </div>
+
+            </div>
+
+
+        </div>
         <div class="intro"></div>
 
         <!-- 服務項目 -->
@@ -70,10 +89,7 @@
                 </div>
 
                 <!-- 到時候替換動畫效果 -->
-                <div class="col-lg-6 d-flex indeximg sticky-top" style="background-color:#c2c2c2; height:900px;">
-                    <img class="show" src="../img/index/index-01.png" style="width:100%; object-fit: contain;">
-
-
+                <div class="col-lg-6 d-flex" style="background-color:#c2c2c2; height:900px;">
                 </div>
             </div>
 
@@ -108,6 +124,7 @@
                             <div class="card shadow-sm px-3 py-2">
                                 <div class="card-body">
                                     <h3 class="indexh3">標題標題</h3>
+                                    <hr>
                                     <p class="indexp2">
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
@@ -124,6 +141,7 @@
                             <div class="card shadow-sm px-3 py-2">
                                 <div class="card-body">
                                     <h3 class="indexh3">標題標題</h3>
+                                    <hr>
                                     <p class="indexp2">
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
@@ -140,6 +158,7 @@
                             <div class="card shadow-sm px-3 py-2">
                                 <div class="card-body">
                                     <h3 class="indexh3">標題標題</h3>
+                                    <hr>
                                     <p class="indexp2">
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
@@ -161,7 +180,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 d-flex align-items-center justify-content-center">
-                    <div class = "m-5 p-4" style = "width: 500px;">
+                    <div class="m-5 p-4" style="width: 500px;">
                         <h1 class="indexh1">ABOUT<br>US.
                             <h2 class="indexh2">關於我們</h2>
                             <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
@@ -186,13 +205,14 @@
                 <div style="text-align:center; width:100% ;margin:auto;">
                     <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
                     <hr>
-                    <a href="./Blossom.html" class="m-2">Home</a>
-                    <a href="./Words.html" class="m-2">About</a>
-                    <a href="./Map.html" class="m-2">Services</a>
-                    <a href="./About.html" class="m-2">Contact</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Home</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">About</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Services</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Contact</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Product</a>
                     <br>
                     <br>
-                    <p style="font-size:14px; color:#a2a2a2">&copy; 2022 00000000 </p>
+                    <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
                 </div>
             </div>
         </footer>
